# cookiecutter-airpackage

./: .gitignore  README.md  cookiecutter.json  justfile  pyproject.toml
{{cookiecutter.slug}}/: README.md  justfile  pyproject.toml
{{cookiecutter.slug}}/.github/workflows/: CI.yaml  release-to-pypi.yaml
