[project]
name = "{{cookiecutter.name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }
]
requires-python = ">=3.13"
dependencies = [
    "air>=0.39.0",
    "greenlet>=3.2.4", # Dependency for SQLAlchemy to run async
    "sqlmodel>=0.0.27",
]
urls.Homepage = "https://github.com/pydanny/airsqlmodel"
urls.Issues = "https://github.com/pydanny/airsqlmodel/issues"

[dependency-groups]
dev = [
    "ipdb",
    "pytest>=8.4.2",    
    "ruff>=0.14.3",    
    "rust-just>=1.43.0",
    "pytest-asyncio>=1.1.0", # Adds asyncio support for pytest
]


[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"


[tool.pytest_env]
# Test value for the SUPER_SECRET_KEY environment variable
# DATABASE_URL = "sqlite:///:memory:"
