[project]
name = "{{cookiecutter.name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }
]
requires-python = ">=3.13"
dependencies = [
    "air>=0.39.0",
]
urls.Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.slug}}"
urls.Issues = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.slug}}/issues"

[dependency-groups]
dev = [
    "ipdb",
    "pytest>=8.4.2",    
    "ruff>=0.14.3",    
    "rust-just>=1.43.0",
]


[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"


[tool.pytest_env]
# Test value for the SUPER_SECRET_KEY environment variables
# DATABASE_URL = "sqlite:///:memory:"
